	* Fixed bug #11269: Proofread the manual
	* Fixed bug #11799: Improve usability of the linkvalidator interface
	* Fixed bug #11834: Do not show the table with the list of broken links, if there are no broken links
	* Fixed bug #11836: Make use of Flash Messages
	* Fixed bug #11819: Prevent PHP notices by fixing XClass inclusion code

2010-12-31  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11776: URL/Linktarget for files is broken
	* Fixed bug #11800: Checkboxes showing the number of broken links do not display the value "zero"
	* Fixed bug #11803: Fix locallang files
	* Fixed bug #11801: Variable in the message "Page '' does not exist." will never be filled
	* Fixed bug #11798: Table displaying the number of broken links must be styled
	* Fixed bug #11813: Give the User Interface a clear structure
	* Fixed bug #11811: Label tags in Statistics table do not work
	* Fixed bug #11812: Changing a checkbox from the statistics table resets the depth chosen for pages to check
	* Fixed bug #11814: Fix indentation in HTML templates, CSS files and SQL file

2010-12-30  Christopher  <chrissitopher@gmx.de>

	* Fixed bug #11779: Unify usage of tooltips in table rows
	* Fixed bug #11775: Table should use new design for TYPO3 4.5
	* Fixed bug #11796: Improve usage of $GLOBALS['LANG']

2010-12-28  Pierre Boivin <pierre.boivin@infoglobe.ca>

	* Fixed bug #11715: Use localized format for date and time

2010-12-06  Pierre Boivin <pierre.boivin@infoglobe.ca>

	* Fixed bug : #11277: Initialize and other methods in modfunc1 could be protected
	* Fixed bug : #11278: Create an interface for the linktype classes
	* Fixed bug : #10589: HTTP errors might not be detected (Thanks to Tolleiv Nietsch)
	* Fixed bug : #11274: Change true to 1 for showUpdateButton
	* Fixed bug : #11272: Fix dos line endings in ext_tables.php
	* Fixed bug : #11270: List in the BE module should be sorted by record
	* Fixed bug : #11275: Remove clear.gif in modfunc1